# Course-Work-4-Job-Parser-

./: README.md  pyproject.toml
src/: api_code.py  json_code.py  main.py  search.py
